# LoliManiac-s-reactions

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
include/: ElementalReactionsAPI.h
src/: Elements.cpp  Elements.h  plugin.cpp
src/single/: FreezeFrost.cpp  FreezeFrost.h
